RESOLVED FIXED307641
[Scroll anchoring] Anchoring fails if there's a focused element on the page
https://bugs.webkit.org/show_bug.cgi?id=307641
Summary [Scroll anchoring] Anchoring fails if there's a focused element on the page
Simon Fraser (smfr)
Reported 2026-02-11 21:46:09 PST
There's a bug where the priority candidate logic is wrong.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-11 21:46:15 PST
Simon Fraser (smfr)
Comment 2 2026-02-11 21:48:26 PST
EWS
Comment 3 2026-02-12 07:39:58 PST
Committed 307364@main (7f1731bd1dc1): <https://commits.webkit.org/307364@main> Reviewed commits have been landed. Closing PR #58478 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.