[Scroll anchoring] Anchoring fails if there's a focused element on the page https://bugs.webkit.org/show_bug.cgi?id=307641 rdar://170204012

Reviewed by Abrar Rahman Protyasha.

`findPriorityCandidate()` returned true even when it hadn't found a candidate, which broke anchoring on any page
with a focused element.

This fixes a test.

* LayoutTests/imported/w3c/web-platform-tests/css/css-scroll-anchoring/contenteditable-near-cursor.tentative-expected.txt:
* Source/WebCore/page/scrolling/ScrollAnchoringController.cpp:
(WebCore::ScrollAnchoringController::findPriorityCandidate):

Canonical link: https://commits.webkit.org/307364@main